Add tenant currency setup
